--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -315,7 +315,7 @@ body {
   left: calc(50% - 42.5px);
   width: 85px;
   height: 85px;
-  border: 2px solid #fff;
+  border: 4px solid #fff;
   border-radius: 50%;
   overflow: hidden;
 }
@@ -335,18 +335,18 @@ body {
   justify-items: center;
   width: 100%;
   height: 100%;
-  padding: 17px 15px 20px;
+  padding: 17px 0 0;
 }
 .profile-card__title {
   margin: 0;
   font-size: 1.5rem;
   line-height: 2rem;
   font-weight: 700;
-  color: #000;
+  color: hsl(229deg, 23%, 23%);
 }
 .profile-card__title span {
   font-weight: 400;
-  color: hsl(0deg, 0%, 59%);
+  color: hsl(227deg, 10%, 46%);
   margin-left: 8px;
 }
 .profile-card__location {
@@ -354,7 +354,7 @@ body {
   font-size: 1.3rem;
   line-height: 1.8rem;
   font-weight: 400;
-  color: hsl(0deg, 0%, 59%);
+  color: hsl(227deg, 10%, 46%);
 }
 .profile-card__grid {
   -ms-grid-row-align: end;
@@ -366,6 +366,8 @@ body {
   place-content: center;
   place-items: center;
   width: 100%;
+  padding: 20px 15px 20px;
+  border-top: 1px solid rgba(150, 150, 150, 0.3);
 }
 .profile-card__info {
   display: -webkit-box;
@@ -387,10 +389,12 @@ body {
   margin: 0;
   font-size: 1.5rem;
   font-weight: 700;
+  color: hsl(229deg, 23%, 23%);
 }
 .profile-card__type {
   margin: 0;
-  font-size: 1.3rem;
+  font-size: 1.05rem;
+  letter-spacing: 0.1rem;
   font-weight: 400;
-  color: hsl(0deg, 0%, 59%);
+  color: hsl(227deg, 10%, 46%);
 }
